SettingsMessage: search for int32 version when searching an uint32 setting.

There was a bug in the version of this class previously used by MediaPlayer,
and as a result we have settings where uint32 fields are stored as int32.
If the uint32 version is not found, try the int32 version.

Fixes #16922.